Fix Resume spacing

--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -1,7 +1,7 @@
 body {
     color: #000000;
     background: #EEEEEE;
-    font: 1.05em "Times New Roman";
+    font: 1em "Times New Roman";
     line-height: 1.2;
     margin: 40px 0;
 }
